--- a/app/src/main/res/drawable/logout_button.xml
+++ b/app/src/main/res/drawable/logout_button.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <corners android:radius="5dp" />
+
     <gradient
         android:type="linear"
-        android:angle="270"
-        android:startColor="#f609c1"
-        android:endColor="#811488" />
+        android:angle="0"
+        android:startColor="#F8E14C"
+        android:endColor="#F667F6" />
 </shape>
