--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -52,7 +52,7 @@
     <LinearLayout
         android:id="@+id/imageView5"
         android:layout_width="300dp"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:background="@drawable/profile_box_shadow"
         android:elevation="2dp"
@@ -68,7 +68,7 @@
             android:layout_marginTop="60dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Djohan Effendy"
+            android:text="@string/djohan_effendy"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
@@ -77,14 +77,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Role Admin"
+            android:layout_marginBottom="20dp"
+            android:text="@string/role_admin"
             android:textSize="15sp" />
 
         <Button
             android:id="@+id/editProfileBtn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:text="@string/edit_profile"
             android:textColor="@color/white"
             android:background="@drawable/primary_button_shape" />
