--- a/app/src/main/res/layout/activity_comic.xml
+++ b/app/src/main/res/layout/activity_comic.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.HomeFragment">
+    tools:context=".activities.ComicActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recViewComicHome"
+        android:id="@+id/recViewComicDetail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
